--- a/styles/customize/markdown-body.scss
+++ b/styles/customize/markdown-body.scss
@@ -57,8 +57,9 @@ h6 {
 }
 
 [data-highlighted-line] {
-  background: #1616161a;
+  background: #3c3e45;
   --border-opacity: 1;
+  border-left-width: 4px;
   border-left-color: rgb(96 165 250 / var(--border-opacity));
 }
 
@@ -104,7 +105,7 @@ h6 {
 code {
   font-family: var(--font-mono-default);
   padding: 0.175em 0.375em;
-  font-size: min(0.875em, 87.5%);
+  font-size: 0.875em;
   background-color: var(--color-neutral-muted);
   border-radius: 6px;
   counter-reset: line;
@@ -148,9 +149,9 @@ div[data-rehype-pretty-code-fragment] {
   }
 
   pre > code {
-    color: unset;
     padding: unset;
     background-color: unset;
+    line-height: unset;
   }
 }
 
