--- a/styles/index.scss
+++ b/styles/index.scss
@@ -43,6 +43,7 @@ html {
 body {
   margin: 0;
   max-width: 100vw;
+  -webkit-text-size-adjust: 100%;
 }
 
 body {
